refactor: 과제 생성 제출 로직 변경